
Changes with nginx 1.13.2                                        27 Jun 2017

    *) Change: nginx now returns 200 instead of 416 when a range starting
       with 0 is requested from an empty file.

    *) Feature: the "add_trailer" directive.
       Thanks to Piotr Sikora.

    *) Bugfix: nginx could not be built on Cygwin and NetBSD; the bug had
       appeared in 1.13.0.

    *) Bugfix: nginx could not be built under MSYS2 / MinGW 64-bit.
       Thanks to Orgad Shaneh.

    *) Bugfix: a segmentation fault might occur in a worker process when
       using SSI with many includes and proxy_pass with variables.

    *) Bugfix: in the ngx_http_v2_module.
       Thanks to Piotr Sikora.


Changes with nginx 1.13.1                                        30 May 2017

    *) Feature: now a hostname can be used as the "set_real_ip_from"
       directive parameter.

    *) Feature: vim syntax highlighting scripts improvements.

    *) Feature: the "worker_cpu_affinity" directive now works on DragonFly
       BSD.
       Thanks to Sepherosa Ziehau.

    *) Bugfix: SSL renegotiation on backend connections did not work when
       using OpenSSL before 1.1.0.

    *) Workaround: nginx could not be built with Oracle Developer Studio
       12.5.

    *) Workaround: now cache manager ignores long locked cache entries when
       cleaning cache based on the "max_size" parameter.

    *) Bugfix: client SSL connections were immediately closed if deferred
       accept and the "proxy_protocol" parameter of the "listen" directive
       were used.

    *) Bugfix: in the "proxy_cache_background_update" directive.

    *) Workaround: now the "tcp_nodelay" directive sets the TCP_NODELAY
       option before an SSL handshake.


Changes with nginx 1.13.0                                        25 Apr 2017

    *) Change: SSL renegotiation is now allowed on backend connections.

    *) Feature: the "rcvbuf" and "sndbuf" parameters of the "listen"