@@ -1,4 +1,12 @@
 
+Изменения в nginx 1.13.3                                          11.07.2017
+
+    *) Безопасность: специально созданный запрос мог вызвать целочисленное
+       переполнение в range-фильтре и последующую некорректную обработку
+       запрошенных диапазонов, что потенциально могло привести к утечке
+       конфиденциальной информации (CVE-2017-7529).
+
+
 Изменения в nginx 1.13.2                                          27.06.2017
 
     *) Изменение: теперь при запросе диапазона, начинающегося с 0, из
